--- a/Load_Argoverse_Data_Public - Sliding Window.ipynb
+++ b/Load_Argoverse_Data_Public - Sliding Window.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,9 +14,15 @@
     "from glob import glob\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import torch.optim as optim\n",
+    "from torch.autograd import Variable\n",
+    "\n",
+    "\n",
     "\"\"\"Change to the data folder\"\"\"\n",
     "new_path = \"../new_train/\"\n",
-    "val_path = \"../new_val_in\"\n",
+    "val_path = \"../new_val_in/\"\n",
     "\n",
     "# number of sequences in each dataset\n",
     "# train:205942  val:3200 test: 36272 \n",
@@ -32,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,17 +91,19 @@
     "\n",
     "def my_collate(batch):\n",
     "    \"\"\" collate lists of samples into batches, create [ batch_sz x agent_sz x seq_len x feature] \"\"\"\n",
-    "    inp = [numpy.dstack([scene['p_in'], scene['v_in']]) for scene in batch]\n",
+    "    inp = [numpy.dstack([scene['p_in'], scene['v_in'],]) for scene in batch]\n",
     "    out = [numpy.dstack([scene['p_out'], scene['v_out']]) for scene in batch]\n",
-    "# print(inp.size)\n",
-    "    print(\"gap\")\n",
+    "#     inp = [scene['p_in'] for scene in batch]\n",
+    "#     out = [scene['p_out'] for scene in batch]\n",
+    "#     print(inp.size)\n",
+    "#     print(\"gap\")\n",
     "#     print(out.size)\n",
     "    #inp = np.concatenate((inp, out), axis=0)\n",
-    "    inp = torch.LongTensor(inp)\n",
-    "    print(inp.shape)\n",
-    "    print(\"after\")\n",
-    "    print(inp)\n",
-    "    out = torch.LongTensor(out)\n",
+    "    inp = torch.FloatTensor(inp)\n",
+    "#     print(inp.shape)\n",
+    "#     print(\"after\")\n",
+    "#     print(inp)\n",
+    "    out = torch.FloatTensor(out)\n",
     "    return [inp, out]\n",
     "\n",
     "train_loader = DataLoader(train_dataset,batch_size=batch_sz, shuffle = False, collate_fn=my_collate, num_workers=0)"
@@ -103,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,88 +274,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gap\n",
-      "torch.Size([1, 60, 19, 4])\n",
-      "after\n",
-      "tensor([[[[3277, 1947,    0,    0],\n",
-      "          [3277, 1947,    0,    0],\n",
-      "          [3277, 1947,    0,    0],\n",
-      "          ...,\n",
-      "          [3277, 1947,    0,    0],\n",
-      "          [3277, 1947,    0,    0],\n",
-      "          [3277, 1947,    0,    0]],\n",
-      "\n",
-      "         [[3277, 1977,    0,    0],\n",
-      "          [3277, 1977,    0,    0],\n",
-      "          [3277, 1977,    1,    1],\n",
-      "          ...,\n",
-      "          [3277, 1977,    0,   -1],\n",
-      "          [3277, 1977,    0,    0],\n",
-      "          [3277, 1977,    0,    0]],\n",
-      "\n",
-      "         [[3232, 1922,    0,    0],\n",
-      "          [3232, 1922,    0,   -1],\n",
-      "          [3232, 1923,    0,    2],\n",
-      "          ...,\n",
-      "          [3232, 1922,    0,    0],\n",
-      "          [3232, 1922,    0,    0],\n",
-      "          [3232, 1922,    0,    0]],\n",
-      "\n",
-      "         ...,\n",
-      "\n",
-      "         [[   0,    0,    0,    0],\n",
-      "          [   0,    0,    0,    0],\n",
-      "          [   0,    0,    0,    0],\n",
-      "          ...,\n",
-      "          [   0,    0,    0,    0],\n",
-      "          [   0,    0,    0,    0],\n",
-      "          [   0,    0,    0,    0]],\n",
-      "\n",
-      "         [[   0,    0,    0,    0],\n",
-      "          [   0,    0,    0,    0],\n",
-      "          [   0,    0,    0,    0],\n",
-      "          ...,\n",
-      "          [   0,    0,    0,    0],\n",
-      "          [   0,    0,    0,    0],\n",
-      "          [   0,    0,    0,    0]],\n",
-      "\n",
-      "         [[   0,    0,    0,    0],\n",
-      "          [   0,    0,    0,    0],\n",
-      "          [   0,    0,    0,    0],\n",
-      "          ...,\n",
-      "          [   0,    0,    0,    0],\n",
-      "          [   0,    0,    0,    0],\n",
-      "          [   0,    0,    0,    0]]]])\n",
-      "torch.Size([1, 60, 19, 4])\n",
-      "output torch.Size([60, 4])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-41-4e28cec46930>:11: DeprecationWarning: an integer is required (got type numpy.float64).  Implicit conversion to integers using __int__ is deprecated, and may be removed in a future version of Python.\n",
-      "  inp = torch.LongTensor(inp)\n",
-      "<ipython-input-41-4e28cec46930>:15: DeprecationWarning: an integer is required (got type numpy.float64).  Implicit conversion to integers using __int__ is deprecated, and may be removed in a future version of Python.\n",
-      "  out = torch.LongTensor(out)\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "index 18 is out of bounds for dimension 0 with size 0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-74-d25468339bbd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     39\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"output\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0moutput\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     40\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m60\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 41\u001b[1;33m             \u001b[0moutList\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0moutput\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m18\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     42\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m60\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     43\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m19\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: index 18 is out of bounds for dimension 0 with size 0"
+      "test\n",
+      "0   tensor(360815.4062, grad_fn=<MseLossBackward>)\n",
+      "100   tensor(195597.2344, grad_fn=<MseLossBackward>)\n",
+      "200   tensor(222831.7344, grad_fn=<MseLossBackward>)\n",
+      "300   tensor(515626.7812, grad_fn=<MseLossBackward>)\n",
+      "400   tensor(597851.3125, grad_fn=<MseLossBackward>)\n",
+      "500   tensor(426031.3125, grad_fn=<MseLossBackward>)\n",
+      "600   tensor(112337.4062, grad_fn=<MseLossBackward>)\n",
+      "700   tensor(228332.1094, grad_fn=<MseLossBackward>)\n",
+      "800   tensor(86813.7578, grad_fn=<MseLossBackward>)\n",
+      "900   tensor(240729.3281, grad_fn=<MseLossBackward>)\n",
+      "1000   tensor(594589.6250, grad_fn=<MseLossBackward>)\n",
+      "1100   tensor(62695.9688, grad_fn=<MseLossBackward>)\n",
+      "1200   tensor(196395.8906, grad_fn=<MseLossBackward>)\n",
+      "1300   tensor(201950.0156, grad_fn=<MseLossBackward>)\n",
+      "1400   tensor(578082., grad_fn=<MseLossBackward>)\n",
+      "1500   tensor(77448.2812, grad_fn=<MseLossBackward>)\n",
+      "1600   tensor(298774.3750, grad_fn=<MseLossBackward>)\n",
+      "1700   tensor(579002.8750, grad_fn=<MseLossBackward>)\n",
+      "1800   tensor(70584.0078, grad_fn=<MseLossBackward>)\n",
+      "1900   tensor(207199.4844, grad_fn=<MseLossBackward>)\n",
+      "2000   tensor(215630.5469, grad_fn=<MseLossBackward>)\n",
+      "2100   tensor(487334.3438, grad_fn=<MseLossBackward>)\n",
+      "2200   tensor(409131.2812, grad_fn=<MseLossBackward>)\n",
+      "2300   tensor(228829.5156, grad_fn=<MseLossBackward>)\n",
+      "2400   tensor(378193.5312, grad_fn=<MseLossBackward>)\n",
+      "2500   tensor(183305.5781, grad_fn=<MseLossBackward>)\n",
+      "2600   tensor(271488.8125, grad_fn=<MseLossBackward>)\n",
+      "2700   tensor(1090757.2500, grad_fn=<MseLossBackward>)\n",
+      "2800   tensor(145893.9219, grad_fn=<MseLossBackward>)\n",
+      "2900   tensor(539328.8125, grad_fn=<MseLossBackward>)\n",
+      "3000   tensor(1549308.6250, grad_fn=<MseLossBackward>)\n",
+      "3100   tensor(142198.4844, grad_fn=<MseLossBackward>)\n",
+      "3200   tensor(335010.3750, grad_fn=<MseLossBackward>)\n",
+      "3300   tensor(182923.4062, grad_fn=<MseLossBackward>)\n",
+      "3400   tensor(1591005.1250, grad_fn=<MseLossBackward>)\n",
+      "3500   tensor(69833.0078, grad_fn=<MseLossBackward>)\n",
+      "3600   tensor(295238.9688, grad_fn=<MseLossBackward>)\n",
+      "3700   tensor(1317198.5000, grad_fn=<MseLossBackward>)\n",
+      "3800   tensor(350941.5938, grad_fn=<MseLossBackward>)\n",
+      "3900   tensor(193492.5000, grad_fn=<MseLossBackward>)\n",
+      "4000   tensor(162861.5469, grad_fn=<MseLossBackward>)\n",
+      "4100   tensor(80357.2422, grad_fn=<MseLossBackward>)\n",
+      "4200   tensor(315375.7812, grad_fn=<MseLossBackward>)\n",
+      "4300   tensor(444133.3438, grad_fn=<MseLossBackward>)\n",
+      "4400   tensor(528581.5000, grad_fn=<MseLossBackward>)\n",
+      "4500   tensor(258976.9844, grad_fn=<MseLossBackward>)\n",
+      "4600   tensor(187140.2500, grad_fn=<MseLossBackward>)\n",
+      "4700   tensor(139810.5156, grad_fn=<MseLossBackward>)\n",
+      "4800   tensor(225154.0156, grad_fn=<MseLossBackward>)\n",
+      "4900   tensor(423593.3125, grad_fn=<MseLossBackward>)\n",
+      "5000   tensor(165329.8281, grad_fn=<MseLossBackward>)\n",
+      "5100   tensor(357119.1250, grad_fn=<MseLossBackward>)\n",
+      "5200   tensor(507621.0625, grad_fn=<MseLossBackward>)\n",
+      "5300   tensor(252725.9531, grad_fn=<MseLossBackward>)\n",
+      "5400   tensor(192972.2500, grad_fn=<MseLossBackward>)\n",
+      "5500   tensor(221599.0469, grad_fn=<MseLossBackward>)\n",
+      "5600   tensor(929914.2500, grad_fn=<MseLossBackward>)\n",
+      "5700   tensor(598585.4375, grad_fn=<MseLossBackward>)\n",
+      "5800   tensor(91341.8125, grad_fn=<MseLossBackward>)\n",
+      "5900   tensor(173601.5781, grad_fn=<MseLossBackward>)\n",
+      "6000   tensor(214107.7031, grad_fn=<MseLossBackward>)\n",
+      "6100   tensor(472829.7812, grad_fn=<MseLossBackward>)\n",
+      "6200   tensor(605409.8750, grad_fn=<MseLossBackward>)\n",
+      "6300   tensor(111886.1094, grad_fn=<MseLossBackward>)\n",
+      "6400   tensor(268137.0312, grad_fn=<MseLossBackward>)\n",
+      "6500   tensor(701175.8125, grad_fn=<MseLossBackward>)\n",
+      "6600   tensor(172004.4844, grad_fn=<MseLossBackward>)\n",
+      "6700   tensor(114207.3750, grad_fn=<MseLossBackward>)\n",
+      "6800   tensor(289831.2500, grad_fn=<MseLossBackward>)\n",
+      "6900   tensor(269019.2500, grad_fn=<MseLossBackward>)\n",
+      "7000   tensor(509782.9375, grad_fn=<MseLossBackward>)\n",
+      "7100   tensor(239787.6562, grad_fn=<MseLossBackward>)\n",
+      "7200   tensor(369559.1250, grad_fn=<MseLossBackward>)\n",
+      "7300   tensor(95520., grad_fn=<MseLossBackward>)\n",
+      "7400   tensor(373237.0938, grad_fn=<MseLossBackward>)\n",
+      "7500   tensor(205332.2812, grad_fn=<MseLossBackward>)\n",
+      "7600   tensor(68756.4141, grad_fn=<MseLossBackward>)\n",
+      "7700   tensor(359613.0938, grad_fn=<MseLossBackward>)\n",
+      "7800   tensor(413039.6875, grad_fn=<MseLossBackward>)\n",
+      "7900   tensor(185633.4062, grad_fn=<MseLossBackward>)\n",
+      "8000   tensor(237191.0156, grad_fn=<MseLossBackward>)\n",
+      "8100   tensor(230366.8281, grad_fn=<MseLossBackward>)\n",
+      "8200   tensor(240605.0625, grad_fn=<MseLossBackward>)\n",
+      "8300   tensor(165706.4219, grad_fn=<MseLossBackward>)\n",
+      "8400   tensor(125876.8594, grad_fn=<MseLossBackward>)\n",
+      "8500   tensor(488323.8125, grad_fn=<MseLossBackward>)\n",
+      "8600   tensor(257482.0781, grad_fn=<MseLossBackward>)\n",
+      "8700   tensor(269437.8438, grad_fn=<MseLossBackward>)\n",
+      "8800   tensor(264773.8125, grad_fn=<MseLossBackward>)\n",
+      "8900   tensor(1060180.1250, grad_fn=<MseLossBackward>)\n",
+      "9000   tensor(814032.6250, grad_fn=<MseLossBackward>)\n",
+      "9100   tensor(423920.9688, grad_fn=<MseLossBackward>)\n",
+      "9200   tensor(802590., grad_fn=<MseLossBackward>)\n",
+      "9300   tensor(241008.5000, grad_fn=<MseLossBackward>)\n",
+      "9400   tensor(172294.0312, grad_fn=<MseLossBackward>)\n"
      ]
     }
    ],
@@ -377,8 +408,9 @@
     "    \n",
     "    \n",
     "model.train()\n",
-    "\n",
+    "print(\"test\")\n",
     "for i_batch, sample_batch in enumerate(train_loader):\n",
+    "#     print(\"test\")\n",
     "    inp, out = sample_batch\n",
     "    #make_a_histogram(sample_batch, agent_id, xPos, yPos, xVel, yVel)\n",
     "    \"\"\"TODO:\n",
@@ -387,51 +419,37 @@
     "    \"\"\"\n",
     "    inp, out = inp.to(device), out.to(device)\n",
     "    optimizer.zero_grad()\n",
-    "    outList = numpy.array((1,60,30,4))\n",
-    "    print(inp.shape)\n",
+    "#     print(inp[0].shape)\n",
+    "    outList = torch.empty((1,60,30,4))\n",
+    "\n",
     "    for i in range(30):\n",
-    "        output = model(inp[0].float())\n",
-    "        print(\"output\",output.shape)\n",
-    "        for j in range(60):\n",
-    "            outList[0][j][i] = output[0][j][18]\n",
-    "        for k in range(60):\n",
-    "            for j in range(1,19):\n",
-    "                inp[0][k][j-1] = inp[0][k][j]\n",
-    "            inp[18] = output[0][k][-1]\n",
-    "    print(outList)\n",
-    "    #print(out.shape)\n",
-    "    #print(output)\n",
-    "    #print(output.shape)\n",
-    "    #print(out[0].shape)\n",
-    "    loss = F.nll_loss(output, out[0])\n",
+    "        output,hidden = model(inp[0].float())\n",
+    "        output = output.reshape(1,60,19,4)\n",
+    "#         print(\"output\",output[0,:,18].shape)\n",
+    "        \n",
+    "        outList[0,:,i] = output[0,:,18].detach()\n",
+    "#         for j in range(60):\n",
+    "\n",
+    "#             outList[0][j][i] = output[0][j][18].detach().numpy()\n",
+    "#         for k in range(60):\n",
+    "#             for j in range(1,19):\n",
+    "#                 inp[0][k][j-1] = inp[0][k][j]\n",
+    "#             inp[0][k][18] = output[0][k][18]\n",
+    "        inp[0] = torch.roll(inp[0,:],-1,dims=1)\n",
+    "        inp[0,:,18] = output[0,:,18]\n",
+    "\n",
+    "#     outList = torch.FloatTensor(outList)\n",
+    "    outList.requires_grad=True\n",
+    "\n",
+    "#     print(out.shape)\n",
+    "    loss = nn.MSELoss()\n",
+    "    loss = loss(outList, out)\n",
     "    loss.backward()\n",
     "    optimizer.step()\n",
-    "    \n",
-    "    show_sample_batch(sample_batch, agent_id)\n",
-    "    break\n",
-    "    "
+    "#     show_sample_batch(sample_batch, agent_id)\n",
+    "    if i_batch % 100 == 0:\n",
+    "        print (i_batch, \" \",loss)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
